fixed some display issues on mobile

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ a:visited{
 	color: #ff9e93;
 }
 #info-container.mobile-selected{
-	max-height: 100dvh;
+	height: 100dvh;
 	min-height: 0px;
 	overflow: hidden;
 	display: flex;
@@ -223,6 +223,7 @@ details:active .background{
 	font-style: italic;
 	font-weight: 500;
 	font-size: large;
+	text-align: center;
 	user-select: none;
 	transform: translate(0px, 1px) rotate(-45deg);
 }
